.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knowledge
  template:
    metadata:
      labels:
        app: knowledge
    spec:
      containers:
        - name: knowledge
          image: ddecrulle/knowledge:latest
