.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knowledge
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - url
  rules:
    - host: url
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: knowledge
                port:
                  number: 80
